--- a/index.html
+++ b/index.html
@@ -343,7 +343,8 @@
       font-family: 'Inter', sans-serif;
     }
 
-    h2 {
+    /* General H2 for sections like Skills, Projects, Certs, Contact */
+    .section-header h2 {
       font-size: 2.5rem;
       margin-bottom: 3rem;
       position: relative;
@@ -351,16 +352,18 @@
       font-family: 'Inter', sans-serif;
     }
 
-    h2::after {
+    .section-header h2::after {
       content: '';
       position: absolute;
       width: 60px;
       height: 3px;
       background: var(--accent);
       bottom: -15px;
-      left: 0;
+      left: 50%;
+      transform: translateX(-50%); /* Center the underline */
       border-radius: 2px;
     }
+
 
     .accent {
       color: var(--accent);
@@ -545,22 +548,58 @@
       margin-bottom: 2.5rem; 
       text-align: center;
     }
-
-    .section-header h2 {
-      display: inline-block;
-    }
-
-    .section-header h2::after {
-      left: 50%;
-      transform: translateX(-50%);
-    }
     
-    .strength-item p { /* This style is for the card-based strength section */
+    .strength-item p { 
         margin-top: 0.5rem;
         font-size: 0.9rem;
     }
 
-    /* Timeline Styles - REVERTED TO ORIGINAL (for card-based look) */
+    /* Styling for the combined Education & Strengths wrapper */
+    .combined-section-wrapper {
+        background-color: var(--card-bg); 
+        padding: 2.5rem;
+        border-radius: 16px; 
+        box-shadow: 0 8px 25px var(--shadow); 
+        border: 1px solid var(--border);
+        margin-top: 1rem; /* Space above the combined block */
+    }
+
+    .nested-section {
+        margin-bottom: 2rem; 
+    }
+    .nested-section:last-child {
+        margin-bottom: 0; 
+    }
+
+    /* Headers within the combined block */
+    .nested-section .section-header { /* Keep using this for nested section headers for consistency if needed */
+        text-align: left !important; 
+        margin-bottom: 1.5rem !important; 
+    }
+    .nested-section .section-header h2 {
+        font-size: 1.8rem !important; 
+        display: flex !important;
+        align-items: center !important;
+        gap: 0.75rem !important;
+        margin-bottom: 0 !important; 
+        color: var(--text); /* Make nested headers regular text color */
+    }
+     .nested-section .section-header h2 i {
+        color: var(--accent); /* Icon keeps accent color */
+     }
+    .nested-section .section-header h2::after {
+        display: none !important; /* No underline for nested headers */
+    }
+
+
+    .partition-line {
+        height: 1px;
+        background-color: var(--border);
+        margin: 2.5rem 0; 
+        opacity: 0.7;
+    }
+
+    /* Timeline Styles (Original, as per your preference) */
     .timeline {
       position: relative;
       max-width: 800px;
@@ -581,11 +620,11 @@
     }
 
     .timeline-item {
-      padding: 20px 40px; /* Original padding */
+      padding: 20px 40px;
       position: relative;
       width: 50%;
       box-sizing: border-box;
-      margin-bottom: 2rem; /* Original margin */
+      margin-bottom: 2rem;
     }
 
     .timeline-item:nth-child(odd) {
@@ -598,24 +637,24 @@
 
     .timeline-dot {
       position: absolute;
-      width: 16px; /* Original dot size */
+      width: 16px;
       height: 16px;
       background-color: var(--accent);
       border-radius: 50%;
-      top: 30px; /* Original position */
+      top: 30px;
       z-index: 1;
-      box-shadow: 0 0 8px var(--shadow); /* Original shadow */
+      box-shadow: 0 0 8px var(--shadow);
     }
 
     .timeline-item:nth-child(odd) .timeline-dot {
-      right: -8px; /* Original position */
+      right: -8px;
     }
 
     .timeline-item:nth-child(even) .timeline-dot {
-      left: -8px; /* Original position */
+      left: -8px;
     }
 
-    .timeline-content { /* Original card style for timeline */
+    .timeline-content {
       background: var(--card-bg);
       border: 1px solid var(--border);
       border-radius: 12px; 
@@ -624,8 +663,8 @@
       transition: all 0.3s;
       box-shadow: 0 4px 12px var(--shadow); 
     }
-    .timeline-content h3 {
-        font-size: 1.3rem; /* Reverted font size */
+    .timeline-content h3 { /* Specific to timeline cards */
+        font-size: 1.3rem; 
         margin-bottom: 0.8rem; 
         line-height: 1.3;
     }
@@ -646,12 +685,24 @@
         font-size: 0.75rem; 
     }
 
-
     .timeline-content:hover {
-      transform: translateY(-5px); /* Original hover effect */
+      transform: translateY(-5px); 
       box-shadow: 0 8px 20px var(--shadow);
       border-color: var(--accent);
     }
+
+    /* Adjust timeline within combined section if needed */
+    #education_strengths_combined #education .timeline {
+        max-width: none; 
+        padding: 0; 
+        margin-left: -20px; 
+        margin-right: -20px;
+    }
+    /* Ensure sub-cards in strengths grid within combined section fit well */
+    #education_strengths_combined #strengths .grid {
+        gap: 1.5rem; 
+    }
+
 
     .contact-container {
       max-width: 1000px;
@@ -909,6 +960,9 @@
       .profile-image {
         max-height: 65vh; 
       }
+      .combined-section-wrapper {
+        padding: 2rem;
+      }
     }
 
     @media (max-width: 768px) {
@@ -956,7 +1010,17 @@
       .contact-container {
         grid-template-columns: 1fr;
       }
-       /* Original Mobile Timeline */
+      .combined-section-wrapper {
+        padding: 1.5rem;
+      }
+      .nested-section .section-header h2 {
+        font-size: 1.6rem !important;
+      }
+      #education_strengths_combined #education .timeline {
+        margin-left: 0;
+        margin-right: 0;
+      }
+      /* Original Mobile Timeline adjustments */
       .timeline::before {
         left: 31px;
       }
@@ -970,7 +1034,7 @@
       }
       .timeline-item:nth-child(odd) .timeline-dot,
       .timeline-item:nth-child(even) .timeline-dot {
-        left: 23px; /* Original mobile dot position */
+        left: 23px; 
       }
     }
 
@@ -1016,10 +1080,9 @@
     <div class="nav-links">
       <a href="#home">Home</a>
       <a href="#skills">Skills</a>
-      <a href="#education">Education</a>
+      <a href="#education_strengths_combined">Education & Strengths</a>
       <a href="#projects">Projects</a>
       <a href="#certifications">Certifications</a>
-      <a href="#strengths">Strengths</a>
       <a href="#contact">Contact</a>
     </div>
     <button class="toggle-btn" onclick="toggleTheme()">
@@ -1089,57 +1152,87 @@
     </div>
   </section>
 
-
-  <!-- Education Section - Original Timeline Style -->
-  <section id="education">
+  <!-- Combined Education & Strengths Section -->
+  <section id="education_strengths_combined">
     <div class="container">
-      <div class="section-header">
-        <h2>Education</h2>
-      </div>
-      <div class="timeline">
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-content">
-            <h3><i class="fas fa-graduation-cap"></i> Master of Computer Applications</h3>
-            <p>University of Petroleum and Energy Studies, Uttarakhand, India</p>
-            <p class="date"><i class="far fa-calendar-alt"></i> 2024 - 2026</p>
+      <div class="combined-section-wrapper">
+
+        <!-- Education Section (Original Timeline Style) -->
+        <div id="education" class="nested-section"> 
+          <div class="section-header"> <!-- Use section-header for consistency within nested -->
+            <h2><i class="fas fa-graduation-cap"></i> Education</h2>
+          </div>
+          <div class="timeline">
+            <div class="timeline-item">
+              <div class="timeline-dot"></div>
+              <div class="timeline-content">
+                <h3><i class="fas fa-graduation-cap"></i> Master of Computer Applications</h3>
+                <p>University of Petroleum and Energy Studies, Uttarakhand, India</p>
+                <p class="date"><i class="far fa-calendar-alt"></i> 2024 - 2026</p>
+              </div>
+            </div>
+            <div class="timeline-item">
+              <div class="timeline-dot"></div>
+              <div class="timeline-content">
+                <h3><i class="fas fa-user-graduate"></i> Bachelor of Science in Information Technology</h3>
+                <p>Hemvati Nandan Bahuguna Garhwal University, Uttarakhand, India</p>
+                <p class="date"><i class="far fa-calendar-alt"></i> 2021 - 2024</p>
+              </div>
+            </div>
+            <div class="timeline-item">
+              <div class="timeline-dot"></div>
+              <div class="timeline-content">
+                <h3><i class="fas fa-shield-virus"></i> Professional Program in Cyber Security</h3>
+                <p>GICT (Global Institute Of Cyber Technology), Uttarakhand, India</p>
+                <p class="date"><i class="far fa-calendar-alt"></i> 2023 - 2024</p>
+              </div>
+            </div>
+            <div class="timeline-item">
+              <div class="timeline-dot"></div>
+              <div class="timeline-content">
+                <h3><i class="fas fa-school"></i> Intermediate (ISC)</h3>
+                <p>The Aryan School, Dehradun</p> 
+                <p class="date"><i class="far fa-calendar-alt"></i> 2020 - 2021</p>
+              </div>
+            </div>
+            <div class="timeline-item">
+              <div class="timeline-dot"></div>
+              <div class="timeline-content">
+                <h3><i class="fas fa-school"></i> High School (ICSE)</h3>
+                <p>The Aryan School, Dehradun</p>
+                <p class="date"><i class="far fa-calendar-alt"></i> 2018 - 2019</p>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-content">
-            <h3><i class="fas fa-user-graduate"></i> Bachelor of Science in Information Technology</h3>
-            <p>Hemvati Nandan Bahuguna Garhwal University, Uttarakhand, India</p>
-            <p class="date"><i class="far fa-calendar-alt"></i> 2021 - 2024</p>
+
+        <div class="partition-line"></div>
+
+        <!-- Strengths Section (Original Card Style) -->
+        <div id="strengths" class="nested-section">
+          <div class="section-header">
+            <h2><i class="fas fa-star"></i> Strengths</h2>
+          </div>
+          <div class="grid">
+            <div class="sub-card strength-item">
+              <h3><i class="fas fa-brain"></i> Analytical Thinking</h3>
+              <p>Skilled at identifying and resolving complex security issues through methodical analysis.</p>
+            </div>
+            <div class="sub-card strength-item">
+              <h3><i class="fas fa-cogs"></i> Adaptability</h3>
+              <p>Quick to learn and apply new tools, technologies, and security practices in dynamic environments.</p>
+            </div>
+            <div class="sub-card strength-item">
+              <h3><i class="fas fa-users"></i> Team Collaboration</h3>
+              <p>Works seamlessly with teams to develop secure, dependable, and forward-thinking IT solutions.</p>
+            </div>
           </div>
         </div>
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-content">
-            <h3><i class="fas fa-shield-virus"></i> Professional Program in Cyber Security</h3>
-            <p>GICT (Global Institute Of Cyber Technology), Uttarakhand, India</p>
-            <p class="date"><i class="far fa-calendar-alt"></i> 2023 - 2024</p>
-          </div>
-        </div>
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-content">
-            <h3><i class="fas fa-school"></i> Intermediate (ISC)</h3>
-            <p>The Aryan School, Dehradun</p> 
-            <p class="date"><i class="far fa-calendar-alt"></i> 2020 - 2021</p>
-          </div>
-        </div>
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-content">
-            <h3><i class="fas fa-school"></i> High School (ICSE)</h3>
-            <p>The Aryan School, Dehradun</p>
-            <p class="date"><i class="far fa-calendar-alt"></i> 2018 - 2019</p>
-          </div>
-        </div>
-      </div>
-    </div>
+
+      </div> <!-- .combined-section-wrapper -->
+    </div> <!-- .container -->
   </section>
+
 
   <!-- Projects Section -->
   <section id="projects">
@@ -1232,29 +1325,6 @@
     </div>
   </section>
 
-  <!-- Strengths Section - Original Card Style -->
-  <section id="strengths">
-    <div class="container">
-      <div class="section-header">
-        <h2>Strengths</h2>
-      </div>
-      <div class="grid">
-        <div class="sub-card strength-item">
-          <h3><i class="fas fa-brain"></i> Analytical Thinking</h3>
-          <p>Skilled at identifying and resolving complex security issues through methodical analysis.</p>
-        </div>
-        <div class="sub-card strength-item">
-          <h3><i class="fas fa-cogs"></i> Adaptability</h3>
-          <p>Quick to learn and apply new tools, technologies, and security practices in dynamic environments.</p>
-        </div>
-        <div class="sub-card strength-item">
-          <h3><i class="fas fa-users"></i> Team Collaboration</h3>
-          <p>Works seamlessly with teams to develop secure, dependable, and forward-thinking IT solutions.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <!-- Contact Section -->
   <section id="contact">
     <div class="container">
@@ -1334,10 +1404,9 @@
     <div class="footer-links">
       <a href="#home">Home</a>
       <a href="#skills">Skills</a>
-      <a href="#education">Education</a>
+      <a href="#education_strengths_combined">Education & Strengths</a>
       <a href="#projects">Projects</a>
       <a href="#certifications">Certifications</a>
-      <a href="#strengths">Strengths</a>
       <a href="#contact">Contact</a>
     </div>
     <div class="social-links" style="justify-content: center; margin-top: 1.5rem;">
