--- a/index.html
+++ b/index.html
@@ -343,8 +343,7 @@
       font-family: 'Inter', sans-serif;
     }
 
-    /* General H2 for sections like Skills, Projects, Certs, Contact */
-    .section-header h2 {
+    .section-header h2 { /* General H2 for sections like Skills, Projects, Certs, Contact */
       font-size: 2.5rem;
       margin-bottom: 3rem;
       position: relative;
@@ -360,7 +359,7 @@
       background: var(--accent);
       bottom: -15px;
       left: 50%;
-      transform: translateX(-50%); /* Center the underline */
+      transform: translateX(-50%); 
       border-radius: 2px;
     }
 
@@ -446,7 +445,7 @@
         color: var(--card-bg); 
     }
 
-    .sub-card {
+    .sub-card { /* Used for Skills, Projects, Certifications, original Strengths */
       background: var(--card-bg);
       border-radius: 12px;
       padding: 1.75rem; 
@@ -542,165 +541,125 @@
     .grid.certifications-grid { 
         grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     }
-
-
-    .section-header {
-      margin-bottom: 2.5rem; 
-      text-align: center;
-    }
     
-    .strength-item p { 
-        margin-top: 0.5rem;
-        font-size: 0.9rem;
-    }
-
     /* Styling for the combined Education & Strengths wrapper */
     .combined-section-wrapper {
         background-color: var(--card-bg); 
-        padding: 2.5rem;
-        border-radius: 16px; 
-        box-shadow: 0 8px 25px var(--shadow); 
+        padding: 1.5rem; /* Reduced padding */
+        border-radius: 12px; /* Slightly smaller radius */
+        box-shadow: 0 6px 20px var(--shadow); 
         border: 1px solid var(--border);
-        margin-top: 1rem; /* Space above the combined block */
+        margin-top: 1rem; 
     }
 
     .nested-section {
-        margin-bottom: 2rem; 
+        margin-bottom: 1.5rem; /* Reduced space */
     }
     .nested-section:last-child {
         margin-bottom: 0; 
     }
 
-    /* Headers within the combined block */
-    .nested-section .section-header { /* Keep using this for nested section headers for consistency if needed */
+    .nested-section .section-header { 
         text-align: left !important; 
-        margin-bottom: 1.5rem !important; 
+        margin-bottom: 1rem !important; /* More compact */
     }
     .nested-section .section-header h2 {
-        font-size: 1.8rem !important; 
+        font-size: 1.5rem !important; /* Smaller H2 */
         display: flex !important;
         align-items: center !important;
-        gap: 0.75rem !important;
+        gap: 0.5rem !important; /* Smaller gap */
         margin-bottom: 0 !important; 
-        color: var(--text); /* Make nested headers regular text color */
+        color: var(--text); 
     }
      .nested-section .section-header h2 i {
-        color: var(--accent); /* Icon keeps accent color */
+        color: var(--accent); 
+        font-size: 1.3rem; /* Smaller icon */
      }
     .nested-section .section-header h2::after {
-        display: none !important; /* No underline for nested headers */
+        display: none !important; 
     }
 
 
     .partition-line {
         height: 1px;
         background-color: var(--border);
-        margin: 2.5rem 0; 
-        opacity: 0.7;
+        margin: 1.5rem 0; /* Reduced space */
+        opacity: 0.5; /* More subtle */
     }
 
-    /* Timeline Styles (Original, as per your preference) */
-    .timeline {
-      position: relative;
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 0 20px;
-    }
-
-    .timeline::before {
-      content: '';
-      position: absolute;
-      width: 4px;
-      background: var(--accent);
-      top: 0;
-      bottom: 0;
-      left: 50%;
-      margin-left: -2px;
-      border-radius: 2px;
-    }
-
-    .timeline-item {
-      padding: 20px 40px;
-      position: relative;
-      width: 50%;
-      box-sizing: border-box;
-      margin-bottom: 2rem;
-    }
-
-    .timeline-item:nth-child(odd) {
-      left: 0;
-    }
-
-    .timeline-item:nth-child(even) {
-      left: 50%;
-    }
-
-    .timeline-dot {
-      position: absolute;
-      width: 16px;
-      height: 16px;
-      background-color: var(--accent);
-      border-radius: 50%;
-      top: 30px;
-      z-index: 1;
-      box-shadow: 0 0 8px var(--shadow);
-    }
-
-    .timeline-item:nth-child(odd) .timeline-dot {
-      right: -8px;
-    }
-
-    .timeline-item:nth-child(even) .timeline-dot {
-      left: -8px;
-    }
-
-    .timeline-content {
-      background: var(--card-bg);
-      border: 1px solid var(--border);
-      border-radius: 12px; 
-      padding: 1.5rem; 
-      position: relative;
-      transition: all 0.3s;
-      box-shadow: 0 4px 12px var(--shadow); 
-    }
-    .timeline-content h3 { /* Specific to timeline cards */
-        font-size: 1.3rem; 
-        margin-bottom: 0.8rem; 
-        line-height: 1.3;
-    }
-    .timeline-content h3 i {
-        font-size: 1.1rem; 
-        margin-top: 0.2em;
-    }
-    .timeline-content p { 
-        font-size: 0.85rem; 
-        line-height: 1.5; 
-        margin-bottom: 0.3rem; 
-    }
-    .timeline-content .date {
-        font-size: 0.85rem; 
-        margin-top: 0.5rem;
-    }
-    .timeline-content .date i {
-        font-size: 0.75rem; 
-    }
-
-    .timeline-content:hover {
-      transform: translateY(-5px); 
-      box-shadow: 0 8px 20px var(--shadow);
-      border-color: var(--accent);
-    }
-
-    /* Adjust timeline within combined section if needed */
+    /* Timeline Styles - VERY SMALL within combined wrapper */
     #education_strengths_combined #education .timeline {
-        max-width: none; 
-        padding: 0; 
-        margin-left: -20px; 
-        margin-right: -20px;
+      max-width: 100%; 
+      padding: 0; 
+      margin: 0; /* Reset margin if not handled by parent */
     }
-    /* Ensure sub-cards in strengths grid within combined section fit well */
+    #education_strengths_combined #education .timeline::before {
+      width: 2px; 
+      margin-left: -1px;
+    }
+    #education_strengths_combined #education .timeline-item {
+      padding: 5px 15px; 
+      margin-bottom: 0.5rem; 
+    }
+    #education_strengths_combined #education .timeline-dot {
+      width: 8px; 
+      height: 8px; 
+      top: 12px; 
+      right: -4px; 
+      left: -4px;
+      box-shadow: 0 0 3px var(--shadow);
+    }
+    #education_strengths_combined #education .timeline-content {
+      border-radius: 4px; 
+      padding: 0.5rem; 
+      box-shadow: 0 1px 3px var(--shadow); 
+    }
+    #education_strengths_combined #education .timeline-content h3 {
+        font-size: 0.8rem; 
+        margin-bottom: 0.2rem; 
+        line-height: 1.2;
+    }
+    #education_strengths_combined #education .timeline-content h3 i {
+        font-size: 0.7rem; 
+        margin-top: 0.1em;
+    }
+    #education_strengths_combined #education .timeline-content p { 
+        font-size: 0.7rem; 
+        line-height: 1.2; 
+        margin-bottom: 0.15rem; 
+    }
+    #education_strengths_combined #education .timeline-content .date {
+        font-size: 0.65rem; 
+        margin-top: 0.2rem;
+    }
+    #education_strengths_combined #education .timeline-content .date i {
+        font-size: 0.6rem; 
+    }
+    #education_strengths_combined #education .timeline-content:hover {
+      transform: translateY(-2px); 
+      box-shadow: 0 2px 6px var(--shadow);
+    }
+
+
+    /* Strengths Grid - VERY SMALL within combined wrapper */
     #education_strengths_combined #strengths .grid {
-        gap: 1.5rem; 
+        gap: 0.75rem; 
+    }
+    #education_strengths_combined #strengths .sub-card {
+        padding: 0.75rem;
+        border-radius: 6px;
+    }
+     #education_strengths_combined #strengths .sub-card h3 {
+        font-size: 0.85rem;
+        margin-bottom: 0.3rem;
+        gap: 0.5rem;
+    }
+    #education_strengths_combined #strengths .sub-card h3 i {
+        font-size: 0.75rem;
+    }
+    #education_strengths_combined #strengths .sub-card p {
+        font-size: 0.75rem;
+        line-height: 1.3;
     }
 
 
@@ -1016,25 +975,24 @@
       .nested-section .section-header h2 {
         font-size: 1.6rem !important;
       }
-      #education_strengths_combined #education .timeline {
-        margin-left: 0;
-        margin-right: 0;
+      /* Specific mobile timeline adjustments for very small cards */
+      #education_strengths_combined #education .timeline::before {
+        left: 15px; /* Adjust for smaller layout */
+        width: 2px;
       }
-      /* Original Mobile Timeline adjustments */
-      .timeline::before {
-        left: 31px;
-      }
-      .timeline-item {
+      #education_strengths_combined #education .timeline-item {
         width: 100%;
-        padding-left: 70px;
-        padding-right: 25px;
+        padding-left: 30px; /* Space for dot */
+        padding-right: 5px; 
+        margin-bottom: 0.75rem;
       }
-      .timeline-item:nth-child(even) {
-        left: 0;
+      #education_strengths_combined #education .timeline-item:nth-child(even) {
+        left: 0; 
       }
-      .timeline-item:nth-child(odd) .timeline-dot,
-      .timeline-item:nth-child(even) .timeline-dot {
-        left: 23px; 
+      #education_strengths_combined #education .timeline-item:nth-child(odd) .timeline-dot,
+      #education_strengths_combined #education .timeline-item:nth-child(even) .timeline-dot {
+        left: 8px; 
+        top: 15px; 
       }
     }
 
@@ -1064,6 +1022,16 @@
       nav a, .footer-links a { font-size: 0.9rem; }
       .grid.certifications-grid, .grid { 
         grid-template-columns: 1fr;
+      }
+      .combined-section-wrapper {
+        padding: 1rem;
+      }
+       .nested-section .section-header h2 {
+        font-size: 1.3rem !important;
+        gap: 0.4rem !important;
+      }
+      .nested-section .section-header h2 i{
+        font-size: 1.1rem !important;
       }
     }
 
@@ -1157,9 +1125,9 @@
     <div class="container">
       <div class="combined-section-wrapper">
 
-        <!-- Education Section (Original Timeline Style) -->
+        <!-- Education Section (Original Timeline Style, now very small) -->
         <div id="education" class="nested-section"> 
-          <div class="section-header"> <!-- Use section-header for consistency within nested -->
+          <div class="section-header"> 
             <h2><i class="fas fa-graduation-cap"></i> Education</h2>
           </div>
           <div class="timeline">
@@ -1208,7 +1176,7 @@
 
         <div class="partition-line"></div>
 
-        <!-- Strengths Section (Original Card Style) -->
+        <!-- Strengths Section (Original Card Style, now very small) -->
         <div id="strengths" class="nested-section">
           <div class="section-header">
             <h2><i class="fas fa-star"></i> Strengths</h2>
