--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
       font-family: 'Inter', sans-serif;
     }
 
-    .section-header h2 { /* General H2 for sections like Skills, Projects, Certs, Contact */
+    .section-header h2 { 
       font-size: 2.5rem;
       margin-bottom: 3rem;
       position: relative;
@@ -445,7 +445,7 @@
         color: var(--card-bg); 
     }
 
-    .sub-card { /* Used for Skills, Projects, Certifications, original Strengths */
+    .sub-card { 
       background: var(--card-bg);
       border-radius: 12px;
       padding: 1.75rem; 
@@ -542,122 +542,119 @@
         grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     }
     
-    /* Styling for the combined Education & Strengths wrapper */
-    .combined-section-wrapper {
+    /* Styling for the combined Education & Strengths wrapper - TABLE FORMAT */
+    .table-format-wrapper { 
         background-color: var(--card-bg); 
-        padding: 1.5rem; /* Reduced padding */
-        border-radius: 12px; /* Slightly smaller radius */
+        padding: 1.5rem; 
+        border-radius: 12px; 
         box-shadow: 0 6px 20px var(--shadow); 
         border: 1px solid var(--border);
         margin-top: 1rem; 
+        display: grid;
+        grid-template-columns: 1fr 1fr; 
+        gap: 2rem; 
     }
 
     .nested-section {
-        margin-bottom: 1.5rem; /* Reduced space */
-    }
-    .nested-section:last-child {
         margin-bottom: 0; 
     }
 
     .nested-section .section-header { 
         text-align: left !important; 
-        margin-bottom: 1rem !important; /* More compact */
+        margin-bottom: 1rem !important; 
     }
     .nested-section .section-header h2 {
-        font-size: 1.5rem !important; /* Smaller H2 */
+        font-size: 1.5rem !important; 
         display: flex !important;
         align-items: center !important;
-        gap: 0.5rem !important; /* Smaller gap */
+        gap: 0.5rem !important; 
         margin-bottom: 0 !important; 
         color: var(--text); 
     }
      .nested-section .section-header h2 i {
         color: var(--accent); 
-        font-size: 1.3rem; /* Smaller icon */
+        font-size: 1.3rem; 
      }
     .nested-section .section-header h2::after {
         display: none !important; 
     }
 
-
-    .partition-line {
-        height: 1px;
-        background-color: var(--border);
-        margin: 1.5rem 0; /* Reduced space */
-        opacity: 0.5; /* More subtle */
-    }
-
     /* Timeline Styles - VERY SMALL within combined wrapper */
-    #education_strengths_combined #education .timeline {
+    .table-format-wrapper #education .timeline {
       max-width: 100%; 
       padding: 0; 
-      margin: 0; /* Reset margin if not handled by parent */
+      margin: 0; 
     }
-    #education_strengths_combined #education .timeline::before {
+    .table-format-wrapper #education .timeline::before {
       width: 2px; 
       margin-left: -1px;
+      left: 10px; 
+      margin-left: 0;
     }
-    #education_strengths_combined #education .timeline-item {
-      padding: 5px 15px; 
+    .table-format-wrapper #education .timeline-item {
+      padding: 5px 0px 5px 20px; 
       margin-bottom: 0.5rem; 
+      width: 100%; 
+      left: 0 !important; 
     }
-    #education_strengths_combined #education .timeline-dot {
+    .table-format-wrapper #education .timeline-dot {
       width: 8px; 
       height: 8px; 
       top: 12px; 
-      right: -4px; 
-      left: -4px;
+      left: 0px !important; 
       box-shadow: 0 0 3px var(--shadow);
     }
-    #education_strengths_combined #education .timeline-content {
+    .table-format-wrapper #education .timeline-content {
       border-radius: 4px; 
       padding: 0.5rem; 
+      margin-left: 15px; 
       box-shadow: 0 1px 3px var(--shadow); 
     }
-    #education_strengths_combined #education .timeline-content h3 {
+    .table-format-wrapper #education .timeline-content h3 {
         font-size: 0.8rem; 
         margin-bottom: 0.2rem; 
         line-height: 1.2;
     }
-    #education_strengths_combined #education .timeline-content h3 i {
+    .table-format-wrapper #education .timeline-content h3 i {
         font-size: 0.7rem; 
         margin-top: 0.1em;
     }
-    #education_strengths_combined #education .timeline-content p { 
+    .table-format-wrapper #education .timeline-content p { 
         font-size: 0.7rem; 
         line-height: 1.2; 
         margin-bottom: 0.15rem; 
     }
-    #education_strengths_combined #education .timeline-content .date {
+    .table-format-wrapper #education .timeline-content .date {
         font-size: 0.65rem; 
         margin-top: 0.2rem;
     }
-    #education_strengths_combined #education .timeline-content .date i {
+    .table-format-wrapper #education .timeline-content .date i {
         font-size: 0.6rem; 
     }
-    #education_strengths_combined #education .timeline-content:hover {
+    .table-format-wrapper #education .timeline-content:hover {
       transform: translateY(-2px); 
       box-shadow: 0 2px 6px var(--shadow);
     }
 
 
     /* Strengths Grid - VERY SMALL within combined wrapper */
-    #education_strengths_combined #strengths .grid {
+    .table-format-wrapper #strengths .grid {
         gap: 0.75rem; 
+        grid-template-columns: 1fr; 
     }
-    #education_strengths_combined #strengths .sub-card {
+    .table-format-wrapper #strengths .sub-card {
         padding: 0.75rem;
         border-radius: 6px;
     }
-     #education_strengths_combined #strengths .sub-card h3 {
+     .table-format-wrapper #strengths .sub-card h3 {
         font-size: 0.85rem;
         margin-bottom: 0.3rem;
         gap: 0.5rem;
     }
-    #education_strengths_combined #strengths .sub-card h3 i {
+    .table-format-wrapper #strengths .sub-card h3 i {
         font-size: 0.75rem;
     }
-    #education_strengths_combined #strengths .sub-card p {
+    .table-format-wrapper #strengths .sub-card p {
         font-size: 0.75rem;
         line-height: 1.3;
     }
@@ -919,10 +916,25 @@
       .profile-image {
         max-height: 65vh; 
       }
-      .combined-section-wrapper {
+      .table-format-wrapper { /* Changed from combined-section-wrapper */
         padding: 2rem;
       }
     }
+     @media (max-width: 991px) { 
+        .table-format-wrapper {
+            grid-template-columns: 1fr; 
+        }
+        .table-format-wrapper #education .timeline::before {
+          left: 10px; 
+        }
+        .table-format-wrapper #education .timeline-item {
+          padding-left: 20px; 
+        }
+        .table-format-wrapper #education .timeline-dot {
+          left: 0px !important; 
+        }
+    }
+
 
     @media (max-width: 768px) {
       nav {
@@ -969,31 +981,13 @@
       .contact-container {
         grid-template-columns: 1fr;
       }
-      .combined-section-wrapper {
+      .table-format-wrapper {
         padding: 1.5rem;
       }
       .nested-section .section-header h2 {
         font-size: 1.6rem !important;
       }
-      /* Specific mobile timeline adjustments for very small cards */
-      #education_strengths_combined #education .timeline::before {
-        left: 15px; /* Adjust for smaller layout */
-        width: 2px;
-      }
-      #education_strengths_combined #education .timeline-item {
-        width: 100%;
-        padding-left: 30px; /* Space for dot */
-        padding-right: 5px; 
-        margin-bottom: 0.75rem;
-      }
-      #education_strengths_combined #education .timeline-item:nth-child(even) {
-        left: 0; 
-      }
-      #education_strengths_combined #education .timeline-item:nth-child(odd) .timeline-dot,
-      #education_strengths_combined #education .timeline-item:nth-child(even) .timeline-dot {
-        left: 8px; 
-        top: 15px; 
-      }
+      
     }
 
     @media (max-width: 480px) {
@@ -1023,7 +1017,7 @@
       .grid.certifications-grid, .grid { 
         grid-template-columns: 1fr;
       }
-      .combined-section-wrapper {
+      .table-format-wrapper {
         padding: 1rem;
       }
        .nested-section .section-header h2 {
@@ -1048,7 +1042,7 @@
     <div class="nav-links">
       <a href="#home">Home</a>
       <a href="#skills">Skills</a>
-      <a href="#education_strengths_combined">Education & Strengths</a>
+      <a href="#education_strengths_table">Education & Strengths</a>
       <a href="#projects">Projects</a>
       <a href="#certifications">Certifications</a>
       <a href="#contact">Contact</a>
@@ -1120,14 +1114,14 @@
     </div>
   </section>
 
-  <!-- Combined Education & Strengths Section -->
-  <section id="education_strengths_combined">
+  <!-- Combined Education & Strengths Section in Table-like Format -->
+  <section id="education_strengths_table">
     <div class="container">
-      <div class="combined-section-wrapper">
+      <div class="table-format-wrapper">
 
-        <!-- Education Section (Original Timeline Style, now very small) -->
+        <!-- Education Section (Column 1 - Very Small Timeline) -->
         <div id="education" class="nested-section"> 
-          <div class="section-header"> 
+          <div class="section-header">
             <h2><i class="fas fa-graduation-cap"></i> Education</h2>
           </div>
           <div class="timeline">
@@ -1174,9 +1168,7 @@
           </div>
         </div>
 
-        <div class="partition-line"></div>
-
-        <!-- Strengths Section (Original Card Style, now very small) -->
+        <!-- Strengths Section (Column 2 - Very Small Cards) -->
         <div id="strengths" class="nested-section">
           <div class="section-header">
             <h2><i class="fas fa-star"></i> Strengths</h2>
@@ -1197,7 +1189,7 @@
           </div>
         </div>
 
-      </div> <!-- .combined-section-wrapper -->
+      </div> <!-- .table-format-wrapper -->
     </div> <!-- .container -->
   </section>
 
@@ -1372,7 +1364,7 @@
     <div class="footer-links">
       <a href="#home">Home</a>
       <a href="#skills">Skills</a>
-      <a href="#education_strengths_combined">Education & Strengths</a>
+      <a href="#education_strengths_table">Education & Strengths</a>
       <a href="#projects">Projects</a>
       <a href="#certifications">Certifications</a>
       <a href="#contact">Contact</a>
